# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.27.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- manpage: add section how to speed up eix-update / handle metadata
	- Add --print-profile-paths
	- Add --print USE.profile for profile's USE; USE is only make.conf's
	- Honour RESTRICT_INSTALLED as documented
	- Extend COLORFGBG_DARK default for rxvt-unicode with XPM support.
	- eix-remote -q: Pass --no-verbose to wget,
	  see http://forums.gentoo.org/viewtopic.php?p=7208430
	- Support AC_CONFIG_MACRO_DIR[S] of automake-1.13, keep ACLOCAL_AMFLAGS
	- Remove support for <automake-1.11.2
	- Move tools to contrib/

*eix-0.27.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- PLEASE READ THIS IF YOU HAVE TROUBLES WITH COLORS/BACKGROUND:
	  Try the hints in the beginning of the BUGS section of the eix
	  manpage.
	- The background guess heuristics defaults now to black background
	  unless there are sure signs that the background is white.
	  This makes the default choice more consistent with <=eix-0.27.4.
	- Revert BG1=black, BG3=white since it is the only way to guarantee
	  readability if the heuristic fails.
	- Remove rxvt from 256 color terminals: If your rxvt supports
	  256 colors but sets only TERM=rxvt, you have to change this to
	  TERM=rxvt-256color or put TERM_ALT1_ADD=rxvt to /etc/eixrc
	- Users of transparent terms should therefore set BG1=none BG3=none
	  in /etc/eixrc, see the BUGS section of the eix manpage.
	- Make RESET_ALL_LINES=true the default to make forced background color
	  (reversion of BG?-defaults) as non-intrusive as possible.
	- Change TERM_DARK meaning to allow a finer heuristics
	  (e.g. tune whether COLORFGBG is respected).
	- Clear comment lines correctly in non-mask files, see
	  http://bugs.gentoo.org/show_bug.cgi?id=446078 and
	  http://developer.berlios.de/bugs/?func=detailbug&
	  bug_id=18819&group_id=11597
	- Recognize file-ends better for comment separation

*eix-0.27.5